--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#ffc222</color>
-    <color name="colorPrimaryDark">#f2b820</color>
-    <color name="colorAccent">#ffc222</color>
+    <color name="colorPrimary">#414141</color>
+    <color name="colorPrimaryDark">#292929</color>
+    <color name="colorAccent">#808080</color>
     <color name="darkgrey">#FF909090</color>
+
+    <color name="text_light">@android:color/primary_text_dark</color>
+    <color name="text_dark">@android:color/primary_text_light</color>
 
     <string-array name="colors_array" translatable="false">
         <item>#FF33B5E5</item>
@@ -23,6 +26,32 @@
         <item>#FFE0E0E0</item>
         <item>#FFFFFFFF</item>
     </string-array>
+
+    <!-- theme colors -->
+    <color name="theme_blue_primary">#03a9f4</color>
+    <color name="theme_blue_accent">#3871e3</color>
+    <color name="theme_blue_primary_dark">#038dcc</color>
+    <color name="theme_blue_text">@color/text_dark</color>
+
+    <color name="theme_green_primary">#1de9b6</color>
+    <color name="theme_green_accent">#ff448846</color>
+    <color name="theme_green_primary_dark">#19cc9f</color>
+    <color name="theme_green_text">@color/text_dark</color>
+
+    <color name="theme_purple_primary">#aa6aff</color>
+    <color name="theme_purple_accent">#900fea</color>
+    <color name="theme_purple_primary_dark">#975fe2</color>
+    <color name="theme_purple_text">@color/text_dark</color>
+
+    <color name="theme_red_primary">#ff5252</color>
+    <color name="theme_red_accent">#ffa7132b</color>
+    <color name="theme_red_primary_dark">#e64a4a</color>
+    <color name="theme_red_text">@color/text_dark</color>
+
+    <color name="theme_orange_primary">#ffaa3f</color>
+    <color name="theme_orange_accent">#ffa031</color>
+    <color name="theme_orange_primary_dark">#ea9f35</color>
+    <color name="theme_orange_text">@color/text_dark</color>
 
 </resources>
 
