--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,40 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.Blue" parent="AppTheme">
+        <item name="colorPrimary">@color/theme_blue_primary</item>
+        <item name="colorPrimaryDark">@color/theme_blue_primary_dark</item>
+        <item name="colorAccent">@color/theme_blue_accent</item>
+        <item name="android:textColorPrimary">@color/theme_blue_text</item>
+    </style>
+
+    <style name="AppTheme.Green" parent="AppTheme">
+        <item name="colorPrimary">@color/theme_green_primary</item>
+        <item name="colorPrimaryDark">@color/theme_green_primary_dark</item>
+        <item name="colorAccent">@color/theme_green_accent</item>
+        <item name="android:textColorPrimary">@color/theme_green_text</item>
+    </style>
+
+    <style name="AppTheme.Purple" parent="AppTheme">
+        <item name="colorPrimary">@color/theme_purple_primary</item>
+        <item name="colorPrimaryDark">@color/theme_purple_primary_dark</item>
+        <item name="colorAccent">@color/theme_purple_accent</item>
+        <item name="android:textColorPrimary">@color/theme_purple_text</item>
+    </style>
+
+
+    <style name="AppTheme.Red" parent="AppTheme">
+        <item name="colorPrimary">@color/theme_red_primary</item>
+        <item name="colorPrimaryDark">@color/theme_red_primary_dark</item>
+        <item name="colorAccent">@color/theme_red_accent</item>
+        <item name="android:textColorPrimary">@color/theme_red_text</item>
+    </style>
+
+    <style name="AppTheme.Orange" parent="AppTheme">
+        <item name="colorPrimary">@color/theme_orange_primary</item>
+        <item name="colorPrimaryDark">@color/theme_orange_primary_dark</item>
+        <item name="colorAccent">@color/theme_orange_accent</item>
+        <item name="android:textColorPrimary">@color/theme_orange_text</item>
+    </style>
+
 </resources>
