--- a/app/src/main/res/layout/popup_colors.xml
+++ b/app/src/main/res/layout/popup_colors.xml
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="?colorAccent"
-                android:text="More"/>
+                android:text="@string/more"/>
 
         </LinearLayout>
 
