--- a/app/src/main/res/layout/popup_plus.xml
+++ b/app/src/main/res/layout/popup_plus.xml
@@ -53,6 +53,16 @@
                 android:textColor="?colorAccent"
                 android:background="?selectableItemBackground"/>
 
+            <TextView
+                style="?android:textAppearanceMedium"
+                android:id="@+id/btn_import"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textColor="?colorAccent"
+                android:text="@string/new_import"
+                android:padding="8dp"
+                android:background="?selectableItemBackground"/>
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
