Refactor some code and changed the library that handle image zoom/translate used when importing

--- a/app/src/main/res/layout/popup_hsv.xml
+++ b/app/src/main/res/layout/popup_hsv.xml
@@ -75,13 +75,15 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:minHeight="150dp"
                     android:orientation="vertical">
 
                     <FrameLayout
                         android:id="@+id/hue_container"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent">
+                        android:layout_height="0dp"
+                        android:layout_weight="1">
 
                         <ImageView
                             android:id="@+id/hue_color"
