--- a/app/src/main/res/layout/fragment_sketch.xml
+++ b/app/src/main/res/layout/fragment_sketch.xml
@@ -102,12 +102,21 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/white"/>
 
-            <com.github.chrisbanes.photoview.PhotoView
+            <com.jsibbold.zoomage.ZoomageView
                 android:id="@+id/import_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:scaleType="fitCenter"
                 android:visibility="gone"
-                android:background="@android:color/white"/>
+                app:zoomage_restrictBounds="false"
+                app:zoomage_animateOnReset="true"
+                app:zoomage_autoResetMode="NEVER"
+                app:zoomage_autoCenter="true"
+                app:zoomage_zoomable="true"
+                app:zoomage_translatable="true"
+                app:zoomage_minScale="0.6"
+                app:zoomage_maxScale="8" />
 
         </FrameLayout>
 
