--- a/app/src/main/res/layout/fragment_sketch.xml
+++ b/app/src/main/res/layout/fragment_sketch.xml
@@ -96,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.notnotme.sketchup.view.DrawingView
+            <com.notnotme.sketchup.view.drawing.DrawingView
                 android:id="@+id/sketch_drawing"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
