--- a/app/src/main/res/layout/popup_plus.xml
+++ b/app/src/main/res/layout/popup_plus.xml
@@ -63,6 +63,17 @@
                 android:padding="8dp"
                 android:background="?selectableItemBackground"/>
 
+            <TextView
+                style="?android:textAppearanceMedium"
+                android:id="@+id/btn_share"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textColor="?colorAccent"
+                android:text="@string/share"
+                android:padding="8dp"
+                android:background="?selectableItemBackground"/>
+
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
