--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,16 +19,37 @@
             android:id="@+id/fragment_sketch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".fragment.SketchFragment"/>
+            tools:context=".fragment.SketchFragment"
+            tools:layout="@layout/fragment_sketch"/>
 
         <fragment
             android:name="com.notnotme.sketchup.fragment.AlbumFragment"
             android:id="@+id/fragment_album"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".fragment.AlbumFragment"/>
+            tools:context=".fragment.AlbumFragment"
+            tools:layout="@layout/fragment_album"/>
 
     </ViewSwitcher>
+
+    <FrameLayout
+        android:id="@+id/bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:behavior_peekHeight="150dp"
+        app:behavior_hideable="true"
+        app:behavior_skipCollapsed="true"
+        android:orientation="vertical"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+        <fragment
+            android:id="@+id/fragment_tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.notnotme.sketchup.fragment.ToolsFragment"
+            tools:layout="@layout/fragment_tools"/>
+
+    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
 
