Add stroke width control to ToolsFragment, simplified mCallback

--- a/app/src/main/res/layout/fragment_tools.xml
+++ b/app/src/main/res/layout/fragment_tools.xml
@@ -34,9 +34,10 @@
                 android:layout_height="8dp" />
 
             <SeekBar
+                android:id="@+id/stroke_width"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:max="100"/>
+                android:max="50"/>
 
         </LinearLayout>
 
