--- a/app/src/main/res/layout/popup_hsv.xml
+++ b/app/src/main/res/layout/popup_hsv.xml
@@ -18,7 +18,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minWidth="200dp"
+            android:minWidth="250dp"
+            android:minHeight="250dp"
             android:orientation="vertical">
 
             <TextView
@@ -36,7 +37,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:orientation="horizontal"
                 android:layout_margin="4dp">
 
