--- a/app/src/main/res/layout/fragment_sketch.xml
+++ b/app/src/main/res/layout/fragment_sketch.xml
@@ -9,7 +9,6 @@
     android:orientation="vertical"
     tools:context=".fragment.SketchFragment">
 
-    <!-- todo: fix "?" attributes by adding android: to other layouts -->
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -19,7 +18,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
+            android:layout_height="?actionBarSize"
             android:gravity="center"
             app:contentInsetEnd="0dp"
             app:contentInsetStart="0dp"
